fix: list select not shrinking to fit content when there are a small amount of lists + add scrolling overflow to just the list component rather than the whole container

--- a/styles/listSelect.scss
+++ b/styles/listSelect.scss
@@ -1,5 +1,7 @@
 @import '_themes.scss';
 
+$padding: 1.5rem;
+
 .list-select__container{
   display: flex;
   justify-content: center;
@@ -16,6 +18,7 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1rem;
+  padding: $padding $padding 0 $padding;
   .list-select__header-text, .list-select__close{
     font-size: 28px;
     font-weight: 600;
@@ -27,19 +30,30 @@
 }
 
 .list-select{
-  height: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+  max-height: 85%;
   width: 25rem;
   background-color: white;
   border-radius: 5px;
-  padding: 1.5rem;
-  overflow: auto;
-  overflow-x: hidden;
 }
 
 .list-select__list{
+  max-height: 80%;
+  overflow: auto;
+  overflow-x: hidden;
   list-style: none;
-  margin: 0;
-  padding: 0;
+  padding: 0 $padding;
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--brandBlue);
+    border: 1px solid var(--brandBlueDark);
+    border-radius: 5px;
+  }
 }
 
 .list-select__element{
@@ -63,7 +77,9 @@
 .list-select__create-list-container{
   display: flex;
   align-items: center;
+  width: 100%;
   justify-content: center;
+  padding: 0 $padding $padding $padding;
   .list-select__create-list-button{
     display: flex;
     align-items: center;
